Theme tuclase - Se modifica página de inicio (bienvenida y form login)

--- a/less/theme.less
+++ b/less/theme.less
@@ -1,3 +1,10 @@
 /**
  * Define or overwrite your theme selectors within this file.
 **/
+
+//Topbar: overlap para que no se vean dos barras en la página de login
+.topbar {
+    z-index: 999;
+    left: 0;
+    top: 0;
+ }
