Theme tuclase - Boxes de página de login sin sombras

--- a/less/theme.less
+++ b/less/theme.less
@@ -8,3 +8,12 @@
     left: 0;
     top: 0;
  }
+
+ //Box de login sin sombras
+.login-container {
+    .panel {
+        box-shadow: none;
+        -moz-box-shadow: none;
+        -webkit-box-shadow: none;
+    }
+}
