Theme tuclase - (Fix) Imágenes al 100% del contenedor de posts

--- a/less/theme.less
+++ b/less/theme.less
@@ -17,3 +17,10 @@
         -webkit-box-shadow: none;
     }
 }
+
+//Imágenes al 100% del contenedor
+.post-files img {
+    width: 100%;
+    height: auto;
+    max-height: none;
+}
