Theme eleva - se genera css

--- a/less/variables.less
+++ b/less/variables.less
@@ -2,7 +2,7 @@
  * Define or overwrite your theme variables here.
  *
  * Check for @humhub/less/variables.less file for all available variables.
- * 
+ *
  * You can also access your variables within your view files by calling Yii::$app->view->theme->variable('myVariable');
  *
  * You can disable the import of humhub theme components by using variables of the format @prev-{component} e.g.:
@@ -11,3 +11,7 @@
  * @prev-comment: true;
  *
 **/
+
+@primary: #585756;
+@info: #00b0ab;
+@danger: #fc4a64;
