Se limita tamaño del logotipo de 70px en la topbar

--- a/less/theme.less
+++ b/less/theme.less
@@ -16,6 +16,9 @@
         -moz-box-shadow: none;
         -webkit-box-shadow: none;
     }
+    .topbar {
+        height: 80px;
+    }
 }
 
 //Imágenes al 100% del contenedor
